<resources>
    <string name="app_name">CarMaintenance</string>
    <string name="long_string_example">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</string>
    <string name="fab_refresh">Refresh list of checks</string>
    <string name="fragment_checks_button_plan">Запланировать ТО</string>
    <string name="fragment_checks_button_plan_same">Запланировать похожее ТО</string>
    <string name="fragment_checks_checkbox_sort">По дате</string>
    <string name="fragment_checks_fab_content_description">Обновить список пройденных ТО</string>

    <string name="fragment_check_detail_date">Дата:\u0020</string>
    <string name="fragment_check_detail_mileage">Пробег:\u0020</string>
    <string name="fragment_check_detail_company">Наименование организации:\u0020</string>
    <string name="fragment_check_detail_name">Выполнены работы:\n</string>
    <string name="fragment_check_detail_price">Стоимость ТО:\u0020</string>

    <string name="fragment_new_check_work">Планируемые работы</string>
    <string name="fragment_new_check_choose_date">Выберите дату</string>
    <string name="fragment_new_check_button">Запланировать</string>
    <string name="fragment_new_check_check">в календарь</string>
    <string name="fragment_new_check_error">Что-то пошло не так, проверьте дату и описание</string>

    <string name="fragment_menu_button_checks">Проведённые ТО</string>
    <string name="fragment_menu_button_planned_checks">Запланированные ТО</string>
    <string name="fragment_menu_button_new_planned_check">Запланировать ТО</string>
    <string name="fragment_menu_switch_night_mode">Тёмная тема</string>

    <string name="settings_preferences">settings_preferences</string>
    <string name="dark_theme_preference_key">dark_theme_preference_key</string>

</resources>