<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.controllers.MenuFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/fragment_menu_button_checks"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/fragment_menu_button_checks"/>

        <Button
            android:id="@+id/fragment_menu_button_planned_checks"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/fragment_menu_button_planned_checks"/>

        <Button
            android:id="@+id/fragment_menu_button_new_planned_check"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/fragment_menu_button_new_planned_check"/>

    </LinearLayout>
</layout>